# soar_fork

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.py
arc-prize-2025/: arc-agi_evaluation_solutions.json
experience/: download_models.sh  qwen.sh  tuto_expe.md
notebook/: inference_visualisation.ipynb  vizualisation.ipynb
soar/: api.py  grid_formatting.py  llm_utils.py  preprocess.py  prompt.py  render.py
soar/inference/: sample_phase.py
soar/post_process/: dedup.py  filtering.py  merge_filter.py  process_repair_for_training.py  process_sample_for_training.py
soar/repair/: rex.py  rex_inference.py
soar/sandbox/: execute_code.py  execute_code_less_safe.py
soar/training/: train_unsloth.py  utils_process_data.py
